test/src/e2e_vm_tests/test_programs/should_fail/numerics_u16_overflow/src/main.sw
script;

fn main() {
 let mut a0 = 65535; //2^16-1
 let _x0: u16 = a0;

 let mut a1 = 65536; //2^16
 let _x1: u16 = a1;
}